--- a/ScrutineerClient/src/app/shared/components/profile/profile.html
+++ b/ScrutineerClient/src/app/shared/components/profile/profile.html
@@ -5,8 +5,8 @@
     >
         <fa-icon icon="user" [styles]="{}" class="profile-icon"></fa-icon>
         <div *ngIf="profileTabVisible" class="profile-tab-div">
-            <p>Email: {{email}}</p>
-            <p>Role: {{role}}</p>
+            <p>Email: {{user.emailAddress}}</p>
+            <p>Role: {{user.role}}</p>
             <button (click)="openAuthPageInNewTab()">To auth page to logout</button>
         </div>
     </div>
