--- a/ScrutineerClient/src/app/side-bar/side-bar.html
+++ b/ScrutineerClient/src/app/side-bar/side-bar.html
@@ -1,7 +1,6 @@
 <section *ngIf="!loading">
-    <h1>If this shows up, the release pipleine is working!</h1>
     <div *ngIf="profile">
-        <profile [email]="profile.email" [role]="profile.role"></profile>
+        <profile [user]="profile"></profile>
         <h1>Sidebar app</h1>
     </div>
     <div *ngIf="!profile">
