adding more unit tests

--- a/ScrutineerClient/src/app/shared/components/profile/profile.html
+++ b/ScrutineerClient/src/app/shared/components/profile/profile.html
@@ -1,6 +1,6 @@
 <section>
     <div class="profile-circle-div" 
-        (click)="openProfile()"
+        (click)="changeProfileTabVisibility()"
         [ngClass]="{ 'profile-circle-div-tab-opened' : profileTabVisible }"
     >
         <fa-icon icon="user" [styles]="{}" class="profile-icon"></fa-icon>
