Prettier with single quotes

--- a/ScrutineerClient/src/global.scss
+++ b/ScrutineerClient/src/global.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/theming";
+@import '~@angular/material/theming';
 @include mat-core();
 
 $primary-definition: (
@@ -81,7 +81,7 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 .game-title-header {
