--- a/ScrutineerClient/src/app/auth/auth.html
+++ b/ScrutineerClient/src/app/auth/auth.html
@@ -1,19 +1,21 @@
 <section style="padding: 50px">
   <div *ngIf="!loading && !inZendesk">
     <div *ngIf="profile">
-      <h2>You are signed in.</h2>
+      <h2>You have successfully been signed in.</h2>
       <p>Email: {{profile.emailAddress}}</p>
       <p>Role: {{profile.role}}</p>
-      <button (click)="logout()">Logout</button>
     </div>
     <div *ngIf="!profile">
-      <h2>Please signin to your Microsoft account.</h2>
-      <button (click)="login()">Login</button>
+      <h2 *ngIf="loggedOut">You have successfully been signed out.</h2>
+      <h2 *ngIf="aadRedirect" class="error-text">Error logging into the application. <br />Please verify you have correct permissions with an app admin.</h2>
+    </div>
+    <div *ngIf="!!autoCloseTimeSecsLeft">
+      <p>This window will auto-close in {{autoCloseTimeSecsLeft}} seconds</p>
     </div>
   </div>
   <div *ngIf="!loading && inZendesk">
     <h2>Please signin to your Microsoft account.</h2>
-    <button (click)="openAuthPageInNewTab()">Login Page</button>
+    <button (click)="loginWithNewTab()">Login Page</button>
     <br />
     <h2>Authorize the app once you have signed in.</h2>
     <button (click)="recheckAuth()">Authorize App</button>
