--- a/ScrutineerClient/src/app/ticket-sidebar/ticket-sidebar.html
+++ b/ScrutineerClient/src/app/ticket-sidebar/ticket-sidebar.html
@@ -1,5 +1,5 @@
 <section *ngIf="!loading">
-  <profile [user]="profile"></profile>
+  <profile [user]="profile" [parentApp]="appName"></profile>
 
   <h1>{{title}} Info</h1>
   <div *ngIf="player">
