--- a/ScrutineerClient/src/app/shared/components/profile/profile.html
+++ b/ScrutineerClient/src/app/shared/components/profile/profile.html
@@ -8,7 +8,7 @@
     <div *ngIf="profileTabVisible" class="profile-tab-div">
       <p>Email: {{user.emailAddress}}</p>
       <p>Role: {{user.role}}</p>
-      <button (click)="logout()">To auth page to logout</button>
+      <button (click)="logout()">Logout</button>
     </div>
   </div>
 </section>
