added in data privacy anchor tag

--- a/ScrutineerClient/src/app/app.component.html
+++ b/ScrutineerClient/src/app/app.component.html
@@ -9,4 +9,7 @@
         </button>
     </mat-toolbar> -->
   <router-outlet></router-outlet>
+  <section class="footer-section">
+    <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank">Data Protection Notice</a>
+  </section>
 </section>
