--- a/ScrutineerClient/src/app/app.component.scss
+++ b/ScrutineerClient/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import "../variables.scss";
+
 ul {
   list-style-type: none;
 }
@@ -11,7 +13,7 @@ ul {
   margin-right: 10px;
 
   &:hover {
-    color: #337ab7;
+    color: $primaryBlue;
   }
 
   &:focus {
@@ -20,5 +22,21 @@ ul {
 }
 
 .header-selected {
-  color: #337ab7;
+  color: $primaryBlue;
+}
+
+.footer-section {
+  width: 100%;
+  bottom: 0px;
+  position: fixed;
+  height: 40px;
+
+  a {
+    color:  $primaryBlue;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    font-size: 14px;
+  }
 }
