--- a/ScrutineerClient/src/global.scss
+++ b/ScrutineerClient/src/global.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 html,
 body {
   height: 100%;
@@ -15,7 +17,7 @@ body {
 }
 
 .game-title-header {
-  color: #337ab7;
+  color: $primaryBlue;
   font-size: 24px;
   float: right;
   margin-right: 50px;
