--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import "../variables.scss";
+@import '../variables.scss';
 
 ul {
   list-style-type: none;
@@ -32,7 +32,7 @@ ul {
   height: 40px;
 
   a {
-    color:  $primaryBlue;
+    color: $primaryBlue;
     cursor: pointer;
     text-decoration: none;
     text-align: center;
