use scss & styling for hover declaration

--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -46,8 +46,9 @@ ul {
     text-align: center;
     display: inline-block;
     font-size: 14px;
-  }
-  a:hover {
+
+    &:hover {
       text-decoration: underline;
+    }
   }
 }
