--- a/StewardClient/src/app/app.component.html
+++ b/StewardClient/src/app/app.component.html
@@ -14,9 +14,23 @@
   <section class="footer-section">
     <div>
       <p>
-        <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank">Data Protection Notice</a> | 
-        <a href="https://www.microsoft.com/en-us/servicesagreement" target="_blank">Code of Conduct</a> | 
-        <a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank">Community Standards for Xbox</a>
+        <a
+          href="https://privacy.microsoft.com/en-US/data-privacy-notice"
+          target="_blank"
+          >Data Protection Notice</a
+        >
+        |
+        <a
+          href="https://www.microsoft.com/en-us/servicesagreement"
+          target="_blank"
+          >Code of Conduct</a
+        >
+        |
+        <a
+          href="https://www.xbox.com/en-US/legal/community-standards"
+          target="_blank"
+          >Community Standards for Xbox</a
+        >
       </p>
     </div>
   </section>
