--- a/StewardClient/src/app/navbar-app/navbar-app.html
+++ b/StewardClient/src/app/navbar-app/navbar-app.html
@@ -1,6 +1,6 @@
 <section *ngIf="!loading">
   <profile [user]="profile" [parentApp]="appName"></profile>
-  <h1>Sidebar app</h1>
+  <h1>Navbar app</h1>
 </section>
 <section *ngIf="loading">
   <h1>Loading...</h1>
