--- a/StewardClient/src/app/app.component.html
+++ b/StewardClient/src/app/app.component.html
@@ -12,14 +12,10 @@
   </mat-toolbar>
   <router-outlet></router-outlet>
   <section class="footer-section">
-    <div>
-      <p>
-        <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank">Data Protection Notice</a>
-        |
-        <a href="https://www.microsoft.com/en-us/servicesagreement" target="_blank">Code of Conduct</a>
-        |
-        <a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank">Community Standards for Xbox</a>
-      </p>
-    </div>
+    <ul>
+      <li><a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank">Data Protection Notice</a></li>
+      <li><a href="https://www.microsoft.com/en-us/servicesagreement" target="_blank">Code of Conduct</a></li>
+      <li><a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank">Community Standards for Xbox</a></li>
+    </ul>
   </section>
 </section>
