--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -1,9 +1,5 @@
 @import '../variables.scss';
 
-ul {
-  list-style-type: none;
-}
-
 .header-buttons {
   border: 0px;
   font-size: 16px;
@@ -28,24 +24,35 @@ ul {
 .footer-section {
   width: 100%;
   bottom: 0px;
-  position: fixed;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: fixed; // this is currently causing overlap issues but the  to cause overlap issues later
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
 
-  div {
-    display: inline-block;
-    margin: auto;
+    li {
+      padding: 0 .5em;
+      line-height: 1em;
+      text-align: center;
+
+      // tuned to avoid taking up a bunch of space in the ticket sidebar
+      font-size: 12px;
+      @media screen and (min-width: 400px) {
+        font-size: 14px;
+      }
+    }
   }
 
+  // TODO: This style should probably be global? Or a mixin.
   a {
     color: $primaryBlue;
-    cursor: pointer;
     text-decoration: none;
-    text-align: center;
-    display: inline-block;
-    font-size: 14px;
 
     &:hover {
       text-decoration: underline;
