--- a/StewardClient/src/app/navbar-app/navbar-app.html
+++ b/StewardClient/src/app/navbar-app/navbar-app.html
@@ -1,3 +1,14 @@
+<!-- Header from POC. This can be reused when rebuilding inventory app -->
+<mat-toolbar>
+  <button
+    *ngFor="let title of titles; let i = index"
+    class="header-buttons"
+    (click)="selectHeader(i)"
+    [ngClass]="{ 'header-selected': selectedHeaderIndex == i }"
+  >
+    {{ title }}
+  </button>
+</mat-toolbar>
 <section *ngIf="!loading">
   <profile [user]="profile" [parentApp]="appName"></profile>
   <h1>Navbar app</h1>
