--- a/StewardClient/src/app/four-oh-four/four-oh-four.component.scss
+++ b/StewardClient/src/app/four-oh-four/four-oh-four.component.scss
@@ -1,13 +1,13 @@
 :host {
+  height: 100%;
+}
+
+.center-message {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  height: 100%;
-}
-
-* {
-  text-align: center;
+  &, * { text-align: center; }
 }
 
 img {
