--- a/StewardClient/src/app/four-oh-four/four-oh-four.component.html
+++ b/StewardClient/src/app/four-oh-four/four-oh-four.component.html
@@ -1,5 +1,6 @@
-<section>
+<navbar></navbar>
+<main class="center-message">
     <h1>404</h1>
     <p>This page does not exist.</p>
     <img src="https://placedog.net/640/480?random">
-</section>
+</main>
