--- a/StewardClient/src/app/navbar-app/inventory-options/inventory-options.html
+++ b/StewardClient/src/app/navbar-app/inventory-options/inventory-options.html
@@ -9,15 +9,24 @@
       {{option}}
     </button>
   </div>
-  <div *ngIf="options[selectedOption] == InventoryOptions.UserGift" class="option-action-div">
+  <div
+    *ngIf="options[selectedOption] == InventoryOptions.UserGift"
+    class="option-action-div"
+  >
     <input class="options-input" type="text" placeholder="XUID" />
     <button class="option-action-button">Lookup</button>
   </div>
-  <div *ngIf="options[selectedOption] == InventoryOptions.GroupGiftByXUID" class="option-action-div">
+  <div
+    *ngIf="options[selectedOption] == InventoryOptions.GroupGiftByXUID"
+    class="option-action-div"
+  >
     <input class="options-input" type="text" placeholder="XUID" />
     <button class="option-action-button">Add XUID</button>
   </div>
-  <div *ngIf="options[selectedOption] == InventoryOptions.GroupGiftByGamertag" class="option-action-div">
+  <div
+    *ngIf="options[selectedOption] == InventoryOptions.GroupGiftByGamertag"
+    class="option-action-div"
+  >
     <input class="options-input" type="text" placeholder="XUID" />
     <button class="option-action-button">Add Gamertag</button>
   </div>
