--- a/StewardClient/src/app/four-oh-four/four-oh-four.component.scss
+++ b/StewardClient/src/app/four-oh-four/four-oh-four.component.scss
@@ -7,7 +7,10 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  &, * { text-align: center; }
+  &,
+  * {
+    text-align: center;
+  }
 }
 
 img {
