--- a/StewardClient/src/app/shared/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/shared/components/navbar/navbar.component.html
@@ -1,13 +1,17 @@
 <!-- Useful example https://stackblitz.com/edit/angular-v6xwte?file=src%2Fapp%2Fapp.component.html -->
 <mat-toolbar>
-  <a [routerLink]="homeRouterLink"
+  <a
+    [routerLink]="homeRouterLink"
     mat-icon-button
     routerLinkActive="mat-stroked-button"
-    ><mat-icon>home</mat-icon></a>
-  <a *ngFor="let item of items"
+    ><mat-icon>home</mat-icon></a
+  >
+  <a
+    *ngFor="let item of items"
     mat-button
     [routerLink]="item.routerLink"
-    routerLinkActive="mat-stroked-button">
+    routerLinkActive="mat-stroked-button"
+  >
     {{ item.title }}
   </a>
   <a mat-button [routerLink]="['/missing-no']">404</a>
