--- a/StewardClient/src/app/navbar-app/navbar-app.html
+++ b/StewardClient/src/app/navbar-app/navbar-app.html
@@ -1,8 +1,3 @@
 <navbar></navbar>
-<div *ngIf="!loading">
-  <profile [user]="profile" [parentApp]="appName"></profile>
-  <h1>Navbar app</h1>
-</div>
-<div *ngIf="loading">
-  <h1>Loading...</h1>
-</div>
+<h1>Navbar App</h1>
+<router-outlet name="navbar-app"></router-outlet>
