--- a/StewardClient/src/app/shared/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Useful example https://stackblitz.com/edit/angular-v6xwte?file=src%2Fapp%2Fapp.component.html -->
-<mat-toolbar>
+<mat-toolbar color="primary">
   <a
     [routerLink]="homeRouterLink"
     mat-icon-button
