--- a/StewardClient/src/variables.scss
+++ b/StewardClient/src/variables.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming'; // TODO: this builds but auto-complete doesn't seem to work with it
+
 $primaryBlue: #337ab7;
 
 $developerRed: #ff0000;
