--- a/StewardClient/src/app/navbar-app/user-details/user-details.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/user-details.component.html
@@ -1,2 +1,17 @@
-test
+<mat-toolbar color="default">
+  <a
+    [routerLink]="['/navbar-app', 'user-details', 'sunrise', gamertag ? gamertag : '']"
+    mat-button
+    routerLinkActive="mat-stroked-button"
+    >Sunrise</a>
+  <span class="icon-spacer"></span>
+  <mat-form-field>
+    <mat-label>Gamertag</mat-label>
+    <input matInput type="text" [(ngModel)]="gamertag" (keyup.enter)="navigate()">
+    <button mat-button *ngIf="gamertag" matSuffix mat-icon-button aria-label="Clear" (click)="gamertag=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+  <span class="spacer"></span>
+</mat-toolbar>
 <router-outlet></router-outlet>
