--- a/StewardClient/src/app/navbar-app/user-details/user-details.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/user-details.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="default">
   <a
-    [routerLink]="['/navbar-app', 'user-details', 'sunrise', gamertag ? gamertag : '']"
+    [routerLink]="['/navbar-app', 'user-details', 'sunrise']"
+    [queryParams]="{gamertag: gamertag}"
     mat-button
     routerLinkActive="mat-stroked-button"
     >Sunrise</a>
