--- a/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
@@ -1,9 +1,23 @@
 <div *ngIf="!gamertag">waiting for gamertag</div>
-<!-- <div *ngIf="!!gamertag">
-  <p>Gamertag: {{ gamertag }}</p>
-  <pre>{{ userDetails | json}}</pre>
-</div> -->
 
+<h1>{{ gamertag }} (xuid: {{xuid !== undefined ? xuid : "?"}})</h1>
 <section *ngIf="!!gamertag">
-  <sunrise-user-flags [xuid]="xuid"></sunrise-user-flags>
+  <mat-tab-group animationDuration="0ms">
+    <mat-tab label="User Details">
+      <div class="tab-container">
+        <sunrise-user-flags [xuid]="xuid"></sunrise-user-flags>
+      </div>
+    </mat-tab>
+    <mat-tab label="Deep Dive">
+      <div class="tab-container">
+        <sunrise-overview [xuid]="xuid"></sunrise-overview>
+      </div>
+    </mat-tab>
+    <mat-tab label="JSON">
+      <div class="tab-container">
+        <p>Gamertag: {{ gamertag }}</p>
+        <pre>{{ userDetails | json}}</pre>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 </section>
