--- a/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
@@ -6,6 +6,9 @@
     <mat-tab label="User Details">
       <div class="tab-container">
         <sunrise-user-flags [xuid]="xuid"></sunrise-user-flags>
+        <sunrise-ban-history [xuid]="xuid"></sunrise-ban-history>
+        <sunrise-gamertags [xuid]="xuid"></sunrise-gamertags>
+        <sunrise-consoles [xuid]="xuid"></sunrise-consoles>
       </div>
     </mat-tab>
     <mat-tab label="Deep Dive">
