--- a/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
@@ -14,6 +14,7 @@
     <mat-tab label="Deep Dive">
       <div class="tab-container">
         <sunrise-overview [xuid]="xuid"></sunrise-overview>
+        <sunrise-credit-history [xuid]="xuid"></sunrise-credit-history>
       </div>
     </mat-tab>
     <mat-tab label="JSON">
