Shared Error Spinner

--- a/StewardClient/src/app/shared/components/error-spinner/error-spinner.component.html
+++ b/StewardClient/src/app/shared/components/error-spinner/error-spinner.component.html
@@ -6,6 +6,7 @@
 <fa-icon
   *ngIf="(!isActive && !!error)"
   [icon]="warningIcon"
+  title="Click to copy error to clipboard"
   [matTooltip]="errorMessage"
   [cdkCopyToClipboard]="error | json"
   class="warning"
