--- a/StewardClient/src/app/navbar-app/user-details/sunrise/user-flags/user-flags.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/user-flags/user-flags.component.html
@@ -1,18 +1,11 @@
 <mat-card>
   <mat-card-content>
     <h2>Sunrise Flags 
-      <fa-icon
-        *ngIf="loadError"
-        [icon]="warningIcon"
-        title="Failed to load"
-      ></fa-icon>
-      <span *ngIf="hasChanges" class="apply">
+      <error-spinner [isActive]="false" [error]="loadError" spinnerMessage="Loading" errorMessage="Failed to load"></error-spinner>
+      <error-spinner [isActive]="isSubmitting" [error]="submitError" spinnerMessage="Submitting" errorMessage="Failed to submit. Try again."></error-spinner>
+      <span *ngIf="hasChanges && !isSubmitting" class="apply">
         <button mat-stroked-button [disabled]="!verified" (click)="apply()">Apply</button>
         <mat-checkbox [(ngModel)]="verified">I have verified flags.</mat-checkbox>
-        <mat-progress-spinner *ngIf="isSubmitting" mode="indeterminate" diameter="20"></mat-progress-spinner>
-        <error-spinner [isActive]="isSubmitting" [error]="submitError" spinnerMessage="Submitting" errorMessage="Failed to submit. Try again.">
-          Hello World
-        </error-spinner>
       </span>
     </h2>
     <ng-container *ngIf="!isLoading && !loadError; else failstate">
