--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
@@ -21,7 +21,7 @@
         </ng-container>
         <ng-container matColumnDef="featureArea">
           <th mat-header-cell *matHeaderCellDef>Starts</th>
-          <td mat-cell *matCellDef="let entry">{{ entry.startTimeUtc | date:'short' }}</td>
+          <td mat-cell *matCellDef="let entry">{{ entry.featureArea | humanize }}</td>
         </ng-container>
         <ng-container matColumnDef="startTimeUtc">
           <th mat-header-cell *matHeaderCellDef>Starts</th>
@@ -33,7 +33,7 @@
         </ng-container>
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let entry" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail"
+            <div class="element-detail"
               [@detailExpand]="entry == expandedEntry ? 'expanded' : 'collapsed'">
               <ng-container *ngTemplateOutlet="servicesBanCard; context: {$implicit: entry}"></ng-container>
               <ng-container *ngIf="entry.correlatedBan">
@@ -44,14 +44,13 @@
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedEntry === element"
+            class="element-row"
+            [class.expanded-row]="expandedEntry === element"
             (click)="expandedEntry = expandedEntry === element ? null : element">
         </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"><
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"><
       </table>
     </ng-container>
-    <pre>{{ history | json }}</pre>
   </mat-card-content>
 </mat-card>
 
@@ -71,10 +70,10 @@
     </mat-card-title>
     <table>
       <tr><td>XUID</td><td>{{entry.xuid}}</td></tr>
-      <tr><td>Feature Area</td><td>{{entry.featureArea}}</td></tr>
-      <tr><td>Reason</td><td>{{entry.reason}}</td></tr>
       <tr><td>Starts</td><td>{{entry.startTimeUtc | date:'short'}}</td></tr>
       <tr><td>Expires</td><td>{{entry.expireTimeUtc | date:'short'}}</td></tr>
+      <tr><td>Feature Area</td><td>{{entry.featureArea | humanize}}</td></tr>
+      <tr><td>Reason</td><td>{{entry.reason}}</td></tr>
       <tr><td>Is Active</td><td>{{entry.isActive}}</td></tr>
       <tr><td>Extended</td><td>{{entry.countOfTimesExtended}} times</td></tr>
       <tr *ngIf="entry.lastExtendedReason"><td>Last Extension Reason</td><td>{{entry.lastExtendedReason}}</td></tr>
@@ -89,10 +88,10 @@
     </mat-card-title>
     <table>
       <tr><td>XUID</td><td>{{entry.xuid}}</td></tr>
-      <tr><td>Feature Area</td><td>{{entry.featureArea}}</td></tr>
-      <tr><td>Reason</td><td>{{entry.reason}}</td></tr>
       <tr><td>Starts</td><td>{{entry.startTimeUtc | date:'short'}}</td></tr>
       <tr><td>Expires</td><td>{{entry.expireTimeUtc | date:'short'}}</td></tr>
+      <tr><td>Feature Area</td><td>{{entry.featureArea | humanize}}</td></tr>
+      <tr><td>Reason</td><td>{{entry.reason}}</td></tr>
       <tr><td>Title</td><td>{{entry.title}}</td></tr>
       <tr><td>Agent</td><td>{{entry.requestingAgent}}</td></tr>
     </table>
