--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.scss
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.scss
@@ -2,28 +2,28 @@ table {
   width: 100%;
 }
 
-tr.example-detail-row {
+tr.detail-row {
   height: 0;
 }
 
-tr.example-element-row:not(.example-expanded-row):hover {
+tr.element-row:not(.expanded-row):hover {
   background: #f5f5f5;
 }
 
-tr.example-element-row:not(.example-expanded-row):active {
+tr.element-row:not(.expanded-row):active {
   background: #efefef;
 }
 
-.example-element-row td {
+.element-row td {
   border-bottom-width: 0;
 }
 
-.example-element-detail {
+.element-detail {
   overflow: hidden;
   display: flex;
 }
 
-.example-element-diagram {
+.element-diagram {
   min-width: 80px;
   border: 2px solid black;
   padding: 8px;
@@ -32,21 +32,21 @@ tr.example-element-row:not(.example-expanded-row):active {
   height: 104px;
 }
 
-.example-element-symbol {
+.element-symbol {
   font-weight: bold;
   font-size: 40px;
   line-height: normal;
 }
 
-.example-element-description {
+.element-description {
   padding: 16px;
 }
 
-.example-element-description-attribution {
+.element-description-attribution {
   opacity: 0.5;
 }
 
-.example-element-detail {
+.element-detail {
   padding: 5px;
   display: flex;
   flex-flow: row wrap;
