--- a/StewardClient/src/app/navbar-app/user-details/sunrise/consoles/consoles.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/consoles/consoles.component.html
@@ -26,7 +26,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let entry">
-            <button mat-stroked-button>Ban?</button>
+            <button mat-stroked-button>TODO</button>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
