--- a/StewardClient/src/app/navbar-app/user-details/sunrise/user-flags/user-flags.component.scss
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/user-flags/user-flags.component.scss
@@ -16,15 +16,7 @@ section.checkboxes {
 
 h2 {
   height: 36px;
-  .apply {
+  verify-action-button {
     font-size: 12px;
-
-    > * {
-      margin: 0 10px;
-    }
-
-    mat-progress-spinner {
-      display: inline;
-    }
   }
 }
