Console ban/unban buttons; polyfill for error serialization

--- a/StewardClient/src/app/navbar-app/user-details/sunrise/user-flags/user-flags.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/user-flags/user-flags.component.html
@@ -10,10 +10,8 @@
       ></error-spinner>
       <verify-action-button
         #submit
-        buttonText="Apply"
         [canSubmit]="hasChanges"
-        [action]="makeAction.bind(this)">
-      </verify-action-button>
+        [action]="makeAction.bind(this)">Apply</verify-action-button>
     </h2>
     <ng-container *ngIf="!isLoading && !loadError; else failstate">
       <section class="checkboxes">
