--- a/StewardClient/src/app/navbar-app/user-details/sunrise/consoles/consoles.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/consoles/consoles.component.html
@@ -26,7 +26,17 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let entry">
-            <button mat-stroked-button>TODO</button>
+            <verify-action-button
+              *ngIf="entry.isBannable && !entry.isBanned"
+              [canSubmit]="true"
+              checkboxText="Verify ban"
+              [action]="makeBanAction(entry.consoleId).bind(this)"><fa-icon [icon]="bannedIcon"></fa-icon> Ban</verify-action-button>
+            <verify-action-button
+              *ngIf="entry.isBannable && entry.isBanned"
+              [canSubmit]="true"
+              checkboxText="Verify ban removal"
+              [action]="makeUnbanAction(entry.consoleId).bind(this)">Unban</verify-action-button>
+            <ng-container *ngIf="!entry.isBannable">Ban Locked.</ng-container>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
