--- a/StewardClient/src/app/shared/components/verify-action-button/verify-action-button.component.html
+++ b/StewardClient/src/app/shared/components/verify-action-button/verify-action-button.component.html
@@ -1,10 +1,17 @@
+<span *ngIf="canSubmit && !isSubmitting" class="apply">
+  <button
+    mat-stroked-button
+    [disabled]="!verified"
+    [matTooltip]="!verified ? verifyText : undefined"
+    (click)="doAction()"
+  >
+    <ng-content></ng-content>
+  </button>
+  <mat-checkbox [(ngModel)]="verified" [matTooltip]="verifyText"></mat-checkbox>
+</span>
 <error-spinner
   [isActive]="isSubmitting"
   [error]="submitError"
   spinnerMessage="Submitting"
   errorMessage="Failed to submit. Try again."
 ></error-spinner>
-<span *ngIf="canSubmit && !isSubmitting" class="apply">
-  <button mat-stroked-button [disabled]="!verified" [matTooltip]="!verified ? verifyText : undefined" (click)="doAction()">{{buttonText}}</button>
-  <mat-checkbox [(ngModel)]="verified" [matTooltip]="verifyText"></mat-checkbox>
-</span>
