--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
@@ -13,42 +13,76 @@
       <table mat-table [dataSource]="banList" multiTemplateDataRows>
         <ng-container matColumnDef="reason">
           <th mat-header-cell *matHeaderCellDef>Reason</th>
-          <td mat-cell *matCellDef="let entry">{{entry.reason}}</td>
+          <td mat-cell *matCellDef="let entry">{{ entry.reason }}</td>
         </ng-container>
         <ng-container matColumnDef="isActive">
           <th mat-header-cell *matHeaderCellDef>Active</th>
-          <td mat-cell *matCellDef="let entry"><fa-icon *ngIf="entry.isActive" [icon]="isActiveIcon"></fa-icon></td>
+          <td mat-cell *matCellDef="let entry">
+            <fa-icon *ngIf="entry.isActive" [icon]="isActiveIcon"></fa-icon>
+          </td>
         </ng-container>
         <ng-container matColumnDef="featureArea">
           <th mat-header-cell *matHeaderCellDef>Starts</th>
-          <td mat-cell *matCellDef="let entry">{{ entry.featureArea | humanize }}</td>
+          <td mat-cell *matCellDef="let entry">
+            {{ entry.featureArea | humanize }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="startTimeUtc">
           <th mat-header-cell *matHeaderCellDef>Starts</th>
-          <td mat-cell *matCellDef="let entry">{{ entry.startTimeUtc | date:'short' }}</td>
+          <td mat-cell *matCellDef="let entry">
+            {{ entry.startTimeUtc | date: 'short' }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="expireTimeUtc">
           <th mat-header-cell *matHeaderCellDef>Expires</th>
-          <td mat-cell *matCellDef="let entry">{{ entry.expireTimeUtc | date:'short' }}</td>
+          <td mat-cell *matCellDef="let entry">
+            {{ entry.expireTimeUtc | date: 'short' }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let entry" [attr.colspan]="columnsToDisplay.length">
-            <div class="element-detail"
-              [@detailExpand]="entry == expandedEntry ? 'expanded' : 'collapsed'">
-              <ng-container *ngTemplateOutlet="servicesBanCard; context: {$implicit: entry}"></ng-container>
+          <td
+            mat-cell
+            *matCellDef="let entry"
+            [attr.colspan]="columnsToDisplay.length"
+          >
+            <div
+              class="element-detail"
+              [@detailExpand]="
+                entry == expandedEntry ? 'expanded' : 'collapsed'
+              "
+            >
+              <ng-container
+                *ngTemplateOutlet="
+                  servicesBanCard;
+                  context: { $implicit: entry }
+                "
+              ></ng-container>
               <ng-container *ngIf="entry.correlatedBan">
-                <ng-container *ngTemplateOutlet="liveOpsBanCard; context: {$implicit: entry.correlatedBan}"></ng-container>
+                <ng-container
+                  *ngTemplateOutlet="
+                    liveOpsBanCard;
+                    context: { $implicit: entry.correlatedBan }
+                  "
+                ></ng-container>
               </ng-container>
             </div>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-            class="element-row"
-            [class.expanded-row]="expandedEntry === element"
-            (click)="expandedEntry = expandedEntry === element ? null : element">
+        <tr
+          mat-row
+          *matRowDef="let element; columns: columnsToDisplay"
+          class="element-row"
+          [class.expanded-row]="expandedEntry === element"
+          (click)="expandedEntry = expandedEntry === element ? null : element"
+        ></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: ['expandedDetail']"
+          class="detail-row"
+        >
+          <
         </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"><
       </table>
     </ng-container>
   </mat-card-content>
@@ -65,35 +99,76 @@
 
 <ng-template #servicesBanCard let-entry>
   <mat-card>
-    <mat-card-title>
-      Services
-    </mat-card-title>
+    <mat-card-title> Services </mat-card-title>
     <table>
-      <tr><td>XUID</td><td>{{entry.xuid}}</td></tr>
-      <tr><td>Starts</td><td>{{entry.startTimeUtc | date:'short'}}</td></tr>
-      <tr><td>Expires</td><td>{{entry.expireTimeUtc | date:'short'}}</td></tr>
-      <tr><td>Feature Area</td><td>{{entry.featureArea | humanize}}</td></tr>
-      <tr><td>Reason</td><td>{{entry.reason}}</td></tr>
-      <tr><td>Is Active</td><td>{{entry.isActive}}</td></tr>
-      <tr><td>Extended</td><td>{{entry.countOfTimesExtended}} times</td></tr>
-      <tr *ngIf="entry.lastExtendedReason"><td>Last Extension Reason</td><td>{{entry.lastExtendedReason}}</td></tr>
+      <tr>
+        <td>XUID</td>
+        <td>{{ entry.xuid }}</td>
+      </tr>
+      <tr>
+        <td>Starts</td>
+        <td>{{ entry.startTimeUtc | date: 'short' }}</td>
+      </tr>
+      <tr>
+        <td>Expires</td>
+        <td>{{ entry.expireTimeUtc | date: 'short' }}</td>
+      </tr>
+      <tr>
+        <td>Feature Area</td>
+        <td>{{ entry.featureArea | humanize }}</td>
+      </tr>
+      <tr>
+        <td>Reason</td>
+        <td>{{ entry.reason }}</td>
+      </tr>
+      <tr>
+        <td>Is Active</td>
+        <td>{{ entry.isActive }}</td>
+      </tr>
+      <tr>
+        <td>Extended</td>
+        <td>{{ entry.countOfTimesExtended }} times</td>
+      </tr>
+      <tr *ngIf="entry.lastExtendedReason">
+        <td>Last Extension Reason</td>
+        <td>{{ entry.lastExtendedReason }}</td>
+      </tr>
     </table>
   </mat-card>
 </ng-template>
 
 <ng-template #liveOpsBanCard let-entry>
   <mat-card>
-    <mat-card-title>
-      Live Ops
-    </mat-card-title>
+    <mat-card-title> Live Ops </mat-card-title>
     <table>
-      <tr><td>XUID</td><td>{{entry.xuid}}</td></tr>
-      <tr><td>Starts</td><td>{{entry.startTimeUtc | date:'short'}}</td></tr>
-      <tr><td>Expires</td><td>{{entry.expireTimeUtc | date:'short'}}</td></tr>
-      <tr><td>Feature Area</td><td>{{entry.featureArea | humanize}}</td></tr>
-      <tr><td>Reason</td><td>{{entry.reason}}</td></tr>
-      <tr><td>Title</td><td>{{entry.title}}</td></tr>
-      <tr><td>Agent</td><td>{{entry.requestingAgent}}</td></tr>
+      <tr>
+        <td>XUID</td>
+        <td>{{ entry.xuid }}</td>
+      </tr>
+      <tr>
+        <td>Starts</td>
+        <td>{{ entry.startTimeUtc | date: 'short' }}</td>
+      </tr>
+      <tr>
+        <td>Expires</td>
+        <td>{{ entry.expireTimeUtc | date: 'short' }}</td>
+      </tr>
+      <tr>
+        <td>Feature Area</td>
+        <td>{{ entry.featureArea | humanize }}</td>
+      </tr>
+      <tr>
+        <td>Reason</td>
+        <td>{{ entry.reason }}</td>
+      </tr>
+      <tr>
+        <td>Title</td>
+        <td>{{ entry.title }}</td>
+      </tr>
+      <tr>
+        <td>Agent</td>
+        <td>{{ entry.requestingAgent }}</td>
+      </tr>
     </table>
   </mat-card>
 </ng-template>
