--- a/StewardClient/src/app/navbar-app/user-details/sunrise/gamertags/gamertags.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/gamertags/gamertags.component.html
@@ -13,27 +13,31 @@
       <table mat-table [dataSource]="sharedConsoleUsers">
         <ng-container matColumnDef="everBanned">
           <th mat-header-cell *matHeaderCellDef>Ever Banned</th>
-          <td mat-cell *matCellDef="let entry"><fa-icon *ngIf="entry.everBanned" [icon]="everBannedIcon"></fa-icon></td>
+          <td mat-cell *matCellDef="let entry">
+            <fa-icon *ngIf="entry.everBanned" [icon]="everBannedIcon"></fa-icon>
+          </td>
         </ng-container>
         <ng-container matColumnDef="gamertag">
           <th mat-header-cell *matHeaderCellDef>Gamertag</th>
           <td mat-cell *matCellDef="let entry">
-            <a [routerLink]="['/navbar-app', 'user-details', 'sunrise']"
-                [queryParams]="{gamertag: entry.gamertag}">
-              {{entry.gamertag}}
+            <a
+              [routerLink]="['/navbar-app', 'user-details', 'sunrise']"
+              [queryParams]="{ gamertag: entry.gamertag }"
+            >
+              {{ entry.gamertag }}
             </a>
           </td>
         </ng-container>
         <ng-container matColumnDef="sharedConsoleId">
           <th mat-header-cell *matHeaderCellDef>Console Id</th>
-          <td mat-cell *matCellDef="let entry">{{entry.sharedConsoleId}}</td>
+          <td mat-cell *matCellDef="let entry">{{ entry.sharedConsoleId }}</td>
         </ng-container>
         <ng-container matColumnDef="xuid">
           <th mat-header-cell *matHeaderCellDef>XUID</th>
-          <td mat-cell *matCellDef="let entry">{{entry.xuid}}</td>
+          <td mat-cell *matCellDef="let entry">{{ entry.xuid }}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
       </table>
     </ng-container>
   </mat-card-content>
