--- a/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!gamertag">waiting for gamertag</div>
 
-<h1>{{ gamertag }} (xuid: {{xuid !== undefined ? xuid : "?"}})</h1>
+<h1>{{ gamertag }} (xuid: {{ xuid !== undefined ? xuid : '?' }})</h1>
 <section *ngIf="!!gamertag">
   <mat-tab-group animationDuration="0ms">
     <mat-tab label="User Details">
@@ -20,7 +20,7 @@
     <mat-tab label="JSON">
       <div class="tab-container">
         <p>Gamertag: {{ gamertag }}</p>
-        <pre>{{ userDetails | json}}</pre>
+        <pre>{{ userDetails | json }}</pre>
       </div>
     </mat-tab>
   </mat-tab-group>
