--- a/StewardClient/src/app/shared/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/shared/components/navbar/navbar.component.html
@@ -17,14 +17,8 @@
   <a mat-button [routerLink]="['/missing-no']">404</a>
   <span class="spacer"></span>
   <span *ngIf="missingZendesk">
-    <fa-icon
-      [icon]="warningIcon"
-      title="Zendesk API missing"
-    ></fa-icon>
-    <fa-icon
-      [icon]="refreshIcon"
-      title="Refresh page"
-    ></fa-icon>
+    <fa-icon [icon]="warningIcon" title="Zendesk API missing"></fa-icon>
+    <fa-icon [icon]="refreshIcon" title="Refresh page"></fa-icon>
   </span>
   <span>{{ location }}</span>
   <span>
