--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
@@ -57,11 +57,11 @@
                   context: { $implicit: entry }
                 "
               ></ng-container>
-              <ng-container *ngIf="entry.correlatedBan">
+              <ng-container *ngIf="entry.correlatedLiveOpsBan">
                 <ng-container
                   *ngTemplateOutlet="
                     liveOpsBanCard;
-                    context: { $implicit: entry.correlatedBan }
+                    context: { $implicit: entry.correlatedLiveOpsBan }
                   "
                 ></ng-container>
               </ng-container>
