--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
@@ -22,7 +22,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="featureArea">
-          <th mat-header-cell *matHeaderCellDef>Starts</th>
+          <th mat-header-cell *matHeaderCellDef>Feature Area</th>
           <td mat-cell *matCellDef="let entry">
             {{ entry.featureArea | humanize }}
           </td>
