Barrel file for sunrise models

--- a/StewardClient/src/variables.scss
+++ b/StewardClient/src/variables.scss
@@ -3,3 +3,14 @@
 $primaryBlue: #337ab7;
 
 $developerRed: #ff0000;
+
+
+$table-tr-hover: #f5f5f5;
+$table-tr-active: #efefef;
+
+$gap-side-gutter: 16px;
+$gap-vertical-layout: 8px;
+$gap-inner-container: 10px;
+$gap-table: 5px;
+
+$width-mediaquery-sidebar-break: 250px;
