--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.scss
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.scss
@@ -1,3 +1,5 @@
+@import '/src/variables.scss';
+
 table {
   width: 100%;
 }
@@ -7,11 +9,11 @@ tr.detail-row {
 }
 
 tr.element-row:not(.expanded-row):hover {
-  background: #f5f5f5;
+  background: $table-tr-hover;
 }
 
 tr.element-row:not(.expanded-row):active {
-  background: #efefef;
+  background: $table-tr-active;
 }
 
 .element-row td {
@@ -23,36 +25,13 @@ tr.element-row:not(.expanded-row):active {
   display: flex;
 }
 
-.element-diagram {
-  min-width: 80px;
-  border: 2px solid black;
-  padding: 8px;
-  font-weight: lighter;
-  margin: 8px 0;
-  height: 104px;
-}
-
-.element-symbol {
-  font-weight: bold;
-  font-size: 40px;
-  line-height: normal;
-}
-
-.element-description {
-  padding: 16px;
-}
-
-.element-description-attribution {
-  opacity: 0.5;
-}
-
 .element-detail {
-  padding: 5px;
+  padding: $gap-table;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   & > * {
-    flex: 1 1 250px;
-    margin: 5px;
+    flex: 1 1 $width-mediaquery-sidebar-break;
+    margin: $gap-table;
   }
 }
