cleanup for scss fix

--- a/StewardClient/autocomplete-patch.scss
+++ b/StewardClient/autocomplete-patch.scss
@@ -1,2 +1,2 @@
-@import '~@angular/material/theming';
 // this allows import intellisense due to a bug in vscode-scss https://github.com/mrmlnc/vscode-scss/issues/126
+@import 'node_modules/@angular/material/theming';
