--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -27,8 +27,10 @@
 
 .footer-section {
   width: 100%;
+  margin-top: 30px;
   bottom: 0px;
-  position: fixed; // this is currently causing overlap issues but the  to cause overlap issues later
+  left: 0px;
+  position: relative; // this is currently causing overlap issues but the  to cause overlap issues later
 
   ul {
     list-style-type: none;
