--- a/StewardClient/src/variables.scss
+++ b/StewardClient/src/variables.scss
@@ -2,6 +2,19 @@
 // TODO: Importing this causes any scss file including it to be horribly large (despite the files only containing variables and mixins)
 // TODO: Verify that compilation works when we standardize the colors to be based on the theme.
 // @import '../autocomplete-patch.scss';
+@import '~@angular/material/theming';
+
+$app-primary: mat-palette($mat-indigo);
+$app-accent: mat-palette($mat-pink, A200, A100, A400);
+$app-warn: mat-palette($mat-red);
+
+$app-theme: mat-light-theme((
+  color: (
+    primary: $app-primary,
+    accent: $app-accent,
+    warn: $app-warn,
+  )
+));
 
 $primaryBlue: #337ab7;
 
