Add BigInt support

--- a/StewardClient/src/app/navbar-app/user-details/sunrise/overview/overview.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/overview/overview.component.html
@@ -62,5 +62,5 @@
     mode="indeterminate"
   ></mat-progress-spinner>
   <p *ngIf="loadError">Failed to load.</p>
-  <pre *ngIf="loadError">{{ loadError | json }}</pre>
+  <pre *ngIf="loadError">{{ loadError | bigjson }}</pre>
 </ng-template>
