--- a/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/sunrise.component.html
@@ -20,7 +20,7 @@
     <mat-tab label="JSON">
       <div class="tab-container">
         <p>Gamertag: {{ gamertag }}</p>
-        <pre>{{ userDetails | json }}</pre>
+        <pre>{{ userDetails | bigjson }}</pre>
       </div>
     </mat-tab>
   </mat-tab-group>
