--- a/StewardClient/src/app/shared/components/error-spinner/error-spinner.component.html
+++ b/StewardClient/src/app/shared/components/error-spinner/error-spinner.component.html
@@ -8,6 +8,6 @@
   [icon]="warningIcon"
   title="Click to copy error to clipboard"
   [matTooltip]="errorMessage"
-  [cdkCopyToClipboard]="error | json"
+  [cdkCopyToClipboard]="error | bigjson"
   class="warning"
 ></fa-icon>
