--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -13,7 +13,7 @@
   margin-right: 10px;
 
   &:hover {
-    color: $primaryBlue;
+    color: mat-color($app-primary);
   }
 
   &:focus {
@@ -22,7 +22,7 @@
 }
 
 .header-selected {
-  color: $primaryBlue;
+  color: mat-color($app-primary);
 }
 
 .footer-section {
@@ -55,7 +55,7 @@
 
   // TODO: This style should probably be global? Or a mixin.
   a {
-    color: $primaryBlue;
+    color: mat-color($app-primary);
     text-decoration: none;
 
     &:hover {
