--- a/StewardClient/src/app/navbar-app/navbar-app.scss
+++ b/StewardClient/src/app/navbar-app/navbar-app.scss
@@ -13,7 +13,7 @@ div {
   margin-right: 10px;
 
   &:hover {
-    color: $primaryBlue;
+    color: mat-color($app-primary);
   }
 
   &:focus {
@@ -22,5 +22,5 @@ div {
 }
 
 .header-selected {
-  color: $primaryBlue;
+  color: mat-color($app-primary);
 }
