--- a/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/ban-history/ban-history.component.html
@@ -94,7 +94,7 @@
     mode="indeterminate"
   ></mat-progress-spinner>
   <p *ngIf="loadError">Failed to load.</p>
-  <pre *ngIf="loadError">{{ loadError | json }}</pre>
+  <pre *ngIf="loadError">{{ loadError | bigjson }}</pre>
 </ng-template>
 
 <ng-template #servicesBanCard let-entry>
