--- a/StewardClient/src/app/navbar-app/user-details/sunrise/credit-history/credit-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/credit-history/credit-history.component.html
@@ -26,13 +26,13 @@
         <ng-container matColumnDef="creditsAfter">
           <th mat-header-cell *matHeaderCellDef>Credit Total</th>
           <td mat-cell *matCellDef="let entry">
-            {{ entry.creditsAfter | number }}
+            {{ entry.creditsAfter | bignumber }}
           </td>
         </ng-container>
         <ng-container matColumnDef="creditAmount">
           <th mat-header-cell *matHeaderCellDef>Credit Change</th>
           <td mat-cell *matCellDef="let entry">
-            {{ entry.creditAmount | number }}
+            {{ entry.creditAmount | bignumber }}
           </td>
         </ng-container>
         <ng-container matColumnDef="sceneName">
@@ -43,7 +43,7 @@
         </ng-container>
         <ng-container matColumnDef="totalXp">
           <th mat-header-cell *matHeaderCellDef>Total XP</th>
-          <td mat-cell *matCellDef="let entry">{{ entry.totalXp | number }}</td>
+          <td mat-cell *matCellDef="let entry">{{ entry.totalXp | bignumber }}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
@@ -58,5 +58,5 @@
     mode="indeterminate"
   ></mat-progress-spinner>
   <p *ngIf="loadError">Failed to load.</p>
-  <pre *ngIf="loadError">{{ loadError | json }}</pre>
+  <pre *ngIf="loadError">{{ loadError | bigjson }}</pre>
 </ng-template>
