--- a/StewardClient/src/variables.scss
+++ b/StewardClient/src/variables.scss
@@ -8,20 +8,32 @@ $app-primary: mat-palette($mat-indigo);
 $app-accent: mat-palette($mat-pink, A200, A100, A400);
 $app-warn: mat-palette($mat-red);
 
-$app-theme: mat-light-theme((
-  color: (
-    primary: $app-primary,
-    accent: $app-accent,
-    warn: $app-warn,
+$app-theme: mat-light-theme(
+  (
+    color: (
+      primary: $app-primary,
+      accent: $app-accent,
+      warn: $app-warn,
+    ),
   )
-));
+);
 
-$primaryBlue: #337ab7;
+//// This is a sample of how angular-material does $app-background internally.
+//// It didn't map well to things like table hover, so I did not use it.
+// $app-config: mat-get-color-config($app-theme);
+// $app-background: map-get($app-config, 'background');
+// $app-foreground: map-get($app-config, 'foreground');
+// $app-sample-hover: map-get($app-background, 'hover')
+// $app-sample-active: map-get($app-background, 'selected-button')
+$app-background: mat-palette($mat-grey);
 
-$developerRed: #ff0000;
+// see the end of [0] for notes on using palette colors
+// [0]: https://material.angular.io/guide/theming-your-components#note-using-the-mat-color-function-to-extract-colors-from-a-palette
+// $primaryBlue: mat-color($app-primary);
+// $developerRed: mat-color($app-warn);
 
-$table-tr-hover: #f5f5f5;
-$table-tr-active: #efefef;
+$table-tr-hover: mat-color($app-background, 100);
+$table-tr-active: mat-color($app-background, 200);
 
 $gap-side-gutter: 16px;
 $gap-vertical-layout: 8px;
