finished up ticket sidebar UI

--- a/StewardClient/src/app/shared/components/content-collapse/content-collapse.html
+++ b/StewardClient/src/app/shared/components/content-collapse/content-collapse.html
@@ -1,7 +1,7 @@
 <button
   mat-mini-fab
   color="primary"
-  [aria-label]="contentCollapsed ? 'Expand Content' : 'Collapse Content'"
+  [attr.aria-label]="contentCollapsed ? 'Expand Content' : 'Collapse Content'"
   class="content-collapse-button"
   (click)="contentCollapsed = !contentCollapsed;"
 >
