fixing more comments

--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -30,7 +30,7 @@
   margin-top: 30px;
   bottom: 0px;
   left: 0px;
-  position: relative; // this is currently causing overlap issues but the  to cause overlap issues later
+  position: relative;
 
   ul {
     list-style-type: none;
